--- a/css/dp-style.css
+++ b/css/dp-style.css
@@ -1,2 +1,101 @@
+/****dp-CSS****/
+.logo-nmk img {
+    width: 267px;
+}
+.nmk-search-drop {
+    background-color: transparent;
+    border: 0;
+    font-size: 14px;
+    color: var(--c-text-tertiary);
+  }
+  .cus-search-form {
+    display: flex;
+    flex-direction: row;
+  }
+  .cus-search-form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .cus-search-form input:focus {
+    box-shadow: none;
+    border: 0;
+  }
+  .cus-search-form input {
+    border: 0;
+    padding: 5px 20px;
+    font-size: 13px;
+    color: #333;
+  }
+  .cus-search-form input::placeholder {
+    font-size: 13px;
+    color: #333;
+  }
+  .cus-search-form {
+    border: 1px solid #a1a1a1;
+    border-radius: 2px;
+    padding: 0 6px 0 12px;
+  }
+  .search-submit {
+    font-size: 18px;
+    transform: rotatey(180deg);
+    background-color: transparent;
+    border: 0;
+    color: var(--c-secondary-text);
+  }
+  .header-middle-right ul {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
+  .header-middle-right ul li {
+    margin-right: 0;
+    margin-left: 26px;
+  }
+  .header-middle-right ul li a {
+    display: flex;
+    align-items: center;
+  }
+  .header-middle-right ul li a span {
+    margin-right: 2px;
+    font-size: 18px;
+    color: var(--c-secondary-text);
+  }
+  .header-middle-right ul li a p {
+    font-size: 14px;
+  }
+  .cus-search-form .dropdown::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 1px;
+    background-color: var(--c-semi-grey-text);
+    right: -11px;
+  }
+  .cus-search-form .dropdown .dropdown-menu {
+    left: -13px !important;
+    border-radius: 0 0px 4px 4px;
+    background-color: var(--c-primary-red);
+    top: 2px !important;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .cus-search-form .dropdown .dropdown-menu li a {
+    color: #fff;
+    font-size: 12px;
+    border-bottom: 1px dashed #ea5979;
+  }
+  .cus-search-form .dropdown .dropdown-menu li:last-child a{
+    border-bottom: 0;
+  }
+  .cus-search-form .dropdown .dropdown-menu li a:hover {
+    background-color: #b30a31;
+  }
+  .header-middle-right ul li a:hover p, .header-middle-right ul li a:hover span {
+    color: var(--c-primary-red);
+  }
+  .header-middle {
+    padding: 16px 0;
+  }
 
-/****CSS****/
